# Aerodynamics4MC-Fabric

./: .gitignore  LICENSE  README.md  build.fabric-m.gradle.kts  build.fabric-o.gradle.kts  build.gradle  build.neoforge.gradle.kts  gradle.properties  settings.gradle.kts  stonecutter.properties.toml
.github/native/tools/: benchmark_solver_dll.py  check_d3q27_fp16.py
.github/workflows/: native-matrix.yml
build-logic/src/main/kotlin/: ModPlatformPlugin.kt
docs/: native-physics-engine-todo.md
native/: CMakeLists.txt  README.md
native/build-all/: CMakeCache.txt  Makefile  cmake_install.cmake
native/build-all-4/: CMakeCache.txt  Makefile  cmake_install.cmake
native/build-all-4/aero_lbm_linux_arm64-prefix/tmp/: aero_lbm_linux_arm64-mkdirs.cmake
native/build-all-4/aero_lbm_linux_x86_64-prefix/tmp/: aero_lbm_linux_x86_64-mkdirs.cmake
native/build-all-4/aero_lbm_macos_arm64-prefix/tmp/: aero_lbm_macos_arm64-cfgcmd.txt  aero_lbm_macos_arm64-mkdirs.cmake
native/build-all-4/aero_lbm_windows_x86_64-prefix/src/aero_lbm_windows_x86_64-stamp/: aero_lbm_windows_x86_64-source_dirinfo.txt
native/build-all-4/aero_lbm_windows_x86_64-prefix/tmp/: aero_lbm_windows_x86_64-mkdirs.cmake
native/build-all/aero_lbm_linux_arm64-prefix/tmp/: aero_lbm_linux_arm64-cfgcmd.txt  aero_lbm_linux_arm64-mkdirs.cmake
native/build-all/aero_lbm_linux_x86_64-prefix/tmp/: aero_lbm_linux_x86_64-cfgcmd.txt  aero_lbm_linux_x86_64-mkdirs.cmake
native/build-all/aero_lbm_macos_arm64-prefix/tmp/: aero_lbm_macos_arm64-cfgcmd.txt  aero_lbm_macos_arm64-mkdirs.cmake
native/build-all/aero_lbm_macos_x86_64-prefix/tmp/: aero_lbm_macos_x86_64-cfgcmd.txt  aero_lbm_macos_x86_64-mkdirs.cmake
native/build-all/aero_lbm_windows_x86_64-prefix/tmp/: aero_lbm_windows_x86_64-cfgcmd.txt  aero_lbm_windows_x86_64-mkdirs.cmake
native/build-all/build-linux_arm64/: CMakeCache.txt
native/build-all/build-linux_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
native/build-all/build-macos_arm64/: CMakeCache.txt
native/build-all/build-macos_x86_64/: CMakeCache.txt
native/build-all/build-windows_x86_64/: CMakeCache.txt
native/cmake/toolchains/: linux-arm64.cmake  linux-x86_64.cmake  macos-arm64.cmake  macos-x86_64.cmake  windows-x86_64.cmake
native/debug/: README.md  run_debug_checks.sh
native/debug/java/com/aerodynamics4mc/client/: NativeLbmDebugHarness.java
native/docs/: jni_dll_usage_zh.md  wind_tunnel_solver_api.md
native/include/: aero_lbm_capi.h  aero_lbm_hydro_core.h  aero_lbm_mesoscale.h  aero_lbm_thermal_core.h  aero_solver_capi.h
native/src/: aero_lbm_analysis_codec.cpp  aero_lbm_analysis_codec.hpp  aero_lbm_hydro_core.cpp  aero_lbm_jni.cpp  aero_lbm_mesoscale.cpp  aero_lbm_simulation_bridge.cpp  aero_lbm_thermal_core.cpp  aero_solver_capi.cpp
native/tools/: benchmark_solver_dll.py
src/client/java/com/aerodynamics4mc/client/: AeroClientMod.java  AeroVisualizer.java  ClientFluidRuntime.java  ClientL2Solver.java  FlowRenderer.java  IrisWindBridge.java  NativeLbmBridge.java  NativeLibraryLoader.java  ParticleWindController.java  PhysicsHandler.java
src/client/java/com/aerodynamics4mc/mixin/client/: AscendingParticleMixin.java  CampfireSmokeParticleMixin.java  LeavesParticleMixin.java  ParticleAccessor.java  ParticleManagerAccessor.java  ParticleMixin.java
src/client/resources/: aerodynamics4mc.client.mixins.json  modid.client.mixins.json
src/main/java/com/aerodynamics4mc/: AeroMod.java  DuctBlock.java  FanBlock.java  FanBlockEntity.java  ModBlocks.java  ModTemplate.java  WindMeterItem.java
src/main/java/com/aerodynamics4mc/api/client/: AeroClientWindApi.java
src/main/java/com/aerodynamics4mc/block/: DuctBlock.java  FanBlock.java  FanBlockEntity.java  ModBlocks.java  WindMeterItem.java  WindTurbineProbeBlock.java  WindTurbineProbeBlockEntity.java
src/main/java/com/aerodynamics4mc/client/: AeroClientMod.java  AeroVisualizer.java  ClientL2Solver.java  IrisWindBridge.java  ParticleWindController.java
src/main/java/com/aerodynamics4mc/flow/: AnalysisFlowCodec.java  PackedFlowField.java
src/main/java/com/aerodynamics4mc/mixin/: ServerWorldBlockStateMixin.java
src/main/java/com/aerodynamics4mc/net/: AeroClientL2PreferencePayload.java  AeroCoarseWindPayload.java  AeroFlowAnalysisPayload.java  AeroFlowPayload.java  AeroNetworking.java  AeroRuntimeStatePayload.java  FabricCustomPayload.java
src/main/java/com/aerodynamics4mc/platform/: Platform.java
src/main/java/com/aerodynamics4mc/platform/fabric/: FabricClientEntrypoint.java  FabricEntrypoint.java  FabricPlatform.java
src/main/java/com/aerodynamics4mc/platform/fabric/datagen/: FabricDataGeneratorEntrypoint.java
src/main/java/com/aerodynamics4mc/platform/forge/: ForgeClientEventSubscriber.java  ForgeEntrypoint.java  ForgePlatform.java
src/main/java/com/aerodynamics4mc/platform/neoforge/: NeoforgeClientEventSubscriber.java  NeoforgeEntrypoint.java  NeoforgePlatform.java
src/main/java/com/aerodynamics4mc/runtime/: ActiveWindowWorldCache.java  AeroServerRuntime.java  BackgroundFieldGrid.java  BackgroundMetGrid.java  DynamicStore.java  HashedSeedTerrainProvider.java  MesoscaleGrid.java  MesoscaleNativeBridge.java  NativeLbmBridge.java  NativeLibraryLoader.java  NativeSimulationBridge.java  NestedBoundaryCoupler.java  SeedTerrainProvider.java  StaticStore.java  WorldMirror.java  WorldScaleDriver.java  WorldThermalSampler.java  WorldgenSeedTerrainProvider.java
src/main/resources/: aerodynamics4mc.mixins.json  fabric.mod.json  modid.mixins.json  pack.mcmeta
src/main/resources/assets/aerodynamics4mc/blockstates/: duct.json  fan.json
src/main/resources/assets/aerodynamics4mc/items/: duct.json  fan.json  wind_meter.json
src/main/resources/assets/aerodynamics4mc/lang/: en_us.json  es_es.json  zh_cn.json
src/main/resources/assets/aerodynamics4mc/models/block/: fan.json
src/main/resources/assets/aerodynamics4mc/models/item/: duct.json  fan.json
src/main/resources/aw/: 1.21.11.accesswidener
